# microphp

./: .gitignore  CMakeLists.txt  README.md  test_build.sh
core/: CMakeLists.txt  microphp.h  vm.c  zval.c
examples/: blink.php  i2c_tmp102.php  pwm_fade.php
hal/esp32/: hal.h
hal/rp2040/: hal.h
targets/: CMakeLists.txt
tools/: CMakeLists.txt
tools/mbc-inspect/: mbc_inspect.py
tools/microphpc/: CMakeLists.txt  compiler.c  compiler.h  main.c
tools/objgen/: objgen.py
